change flask branch yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy Flask App to GitHub Pages
 on:
   push:
     branches:
-      - master  # 在 main 分支推送时触发
+      - flask  # 在 flask 分支推送时触发
 
 jobs:
   build:
